# chiseltrace

./: .gitignore  .gitmodules  Cargo.toml  dynpdg.json  makefile  out_chisel_pdg.json  out_pdg.json  pdg.json  readme.md  trace.vcd
chiseltrace-rs/: Cargo.toml
chiseltrace-rs/src/: conversion.rs  errors.rs  graphbuilder.rs  lib.rs  pdg_spec.rs  sim_data_injection.rs  slicing.rs  util.rs
cli/: Cargo.toml  slice_to_lines.py
cli/src/: main.rs
gui/: README.md  package-lock.json  package.json  vite.config.js
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: app_state.rs  argument_parsing.rs  errors.rs  graph_building.rs  graph_interaction.rs  lib.rs  main.rs  translation.rs
gui/src/lib/components/: CodeBlock.svelte
gui/src/routes/: +page.svelte
gui/src/routes/loading_screen/: +page.svelte
gui/src/routes/view_graph/: +page.svelte
slicer_lib/: Cargo.toml
slicer_lib/src/: conversion.rs  graphbuilder.rs  lib.rs  pdg_spec.rs  sim_data_injection.rs  slicing.rs
src/: cfg.rs  conversion.rs  errors.rs  graphbuilder.rs  main.rs  pdg_spec.rs  sim_data_injection.rs  slicing.rs
